Docker, prod build successful, eslint and prettier formatting

--- a/package.json
+++ b/package.json
@@ -1,82 +1,87 @@
 {
-	"name": "foodie-service",
-	"version": "0.0.1",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "LOG_LEVEL=trace tsc-watch --onSuccess \"node ./dist/server/app.js\"",
-		"test": "mocha -r ts-node/register src/**/*.spec.ts",
-		"build": "tsc --project tsconfig.json",
-		"build:prod": "webpack",
-		"run:dev": "node ./dist/server/app.js",
-		"run:prod": "NODE_ENV=production node ./dist/api.bundle.js",
-		"webpack": "webpack",
-		"start": "nodemon ./src/Server/app.ts",
-		"format:check": "prettier --check .",
-		"format:write": "prettier --write .",
-		"lint:check": "eslint .",
-		"lint:fix": "eslint --fix ."
-	},
-	"keywords": [],
-	"author": "Ravi Chandan Sithiraju",
-	"license": "ISC",
-	"dependencies": {
-		"@aws-sdk/client-s3": "^3.596.0",
-		"@aws-sdk/lib-storage": "^3.596.0",
-		"@mongodb-js/zstd": "^1.2.0",
-		"@types/compression": "^1.7.5",
-		"@types/cors": "^2.8.17",
-		"@types/dotenv": "^8.2.0",
-		"@types/express": "^4.17.21",
-		"@types/node": "^20.11.20",
-		"async": "^3.2.5",
-		"aws4": "^1.12.0",
-		"body-parser": "^1.20.2",
-		"compression": "^1.7.4",
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.5",
-		"express-validator": "^7.0.1",
-		"google-auth-library": "^9.10.0",
-		"http": "0.0.0",
-		"ioredis": "^5.3.2",
-		"joi": "^17.12.2",
-		"kerberos": "^2.1.0",
-		"log4js": "^6.9.1",
-		"mongodb-client-encryption": "^6.0.0",
-		"mongoose": "^8.2.0",
-		"mongoose-sequence": "^6.0.1",
-		"multer": "^1.4.5-lts.1",
-		"redis": "^4.6.13",
-		"redis-clustr": "^1.4.3",
-		"rxjs": "^7.8.1",
-		"tsc-watch": "^6.0.4"
-	},
-	"devDependencies": {
-		"@types/async": "^3.2.24",
-		"@types/chai": "^4.3.12",
-		"@types/mocha": "^10.0.6",
-		"@types/mongoose-sequence": "^3.0.11",
-		"@types/multer": "^1.4.11",
-		"@typescript-eslint/eslint-plugin": "^6.21.0",
-		"chai": "^5.1.0",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-config-standard-with-typescript": "^43.0.1",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-n": "^16.6.2",
-		"eslint-plugin-promise": "^6.1.1",
-		"express": "^4.18.2",
-		"gcp-metadata": "^5.3.0",
-		"mocha": "^10.3.0",
-		"mongodb": "^6.3.0",
-		"node-loader": "^2.0.0",
-		"nodemon": "^3.1.0",
-		"prettier": "^3.2.5",
-		"ts-loader": "^9.5.1",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.3.3",
-		"webpack": "^5.90.3",
-		"webpack-cli": "^5.1.4",
-		"webpack-node-externals": "^3.0.0"
-	}
+  "name": "foodie-service",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "LOG_LEVEL=trace tsc-watch --onSuccess \"node ./dist/server/app.js\"",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "build": "tsc --project tsconfig.json",
+    "build:prod": "webpack",
+    "run:dev": "node ./dist/server/app.js",
+    "run:prod": "DB_CONNECTION_STR=mongodb+srv://admin:admin@cluster0.ztc5ndm.mongodb.net/qa?retryWrites=true&w=majority&appName=Cluster0 NODE_ENV=production node ./dist/api.bundle.js",
+    "webpack": "webpack",
+    "start": "nodemon ./src/Server/app.ts",
+    "format:check": "prettier --config ./.prettierrc  --check .",
+    "format:write": "prettier --config ./.prettierrc --write .",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "run:prettier-check": "prettier --config ./.prettierrc --list-different \"src/{app,environments}/**/*{.ts,.html,.css,.scss}\" \"projects/**/{lib,environments}/**/*{.ts,.html,.css,.scss}\"",
+    "run:prettier-format": "prettier --config ./.prettierrc --write \"src/{app,environments}/**/*{.ts,.html,.css,.scss}\" \"projects/**/{lib,environments}/**/*{.ts,.html,.css,.scss}\""
+  },
+  "keywords": [],
+  "author": "Ravi Chandan Sithiraju",
+  "license": "ISC",
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.596.0",
+    "@aws-sdk/lib-storage": "^3.596.0",
+    "@mongodb-js/zstd": "^1.2.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.20",
+    "async": "^3.2.5",
+    "aws4": "^1.12.0",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express-validator": "^7.0.1",
+    "google-auth-library": "^9.10.0",
+    "http": "0.0.0",
+    "ioredis": "^5.3.2",
+    "joi": "^17.12.2",
+    "kerberos": "^2.1.0",
+    "log4js": "^6.9.1",
+    "mongodb-client-encryption": "^6.0.0",
+    "mongoose": "^8.2.0",
+    "mongoose-sequence": "^6.0.1",
+    "multer": "^1.4.5-lts.1",
+    "redis": "^4.6.13",
+    "redis-clustr": "^1.4.3",
+    "rxjs": "^7.8.1",
+    "tsc-watch": "^6.0.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@types/async": "^3.2.24",
+    "@types/chai": "^4.3.12",
+    "@types/mocha": "^10.0.6",
+    "@types/mongoose-sequence": "^3.0.11",
+    "@types/multer": "^1.4.11",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "chai": "^5.1.0",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "express": "^4.18.2",
+    "gcp-metadata": "^5.3.0",
+    "globals": "^15.5.0",
+    "mocha": "^10.3.0",
+    "mongodb": "^6.3.0",
+    "node-loader": "^2.0.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^7.13.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
