--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build": "tsc --project tsconfig.json",
     "build:prod": "webpack",
     "run:dev": "node ./dist/server/app.js",
-    "run:prod": "DB_CONNECTION_STR=mongodb+srv://admin:admin@cluster0.ztc5ndm.mongodb.net/qa?retryWrites=true&w=majority&appName=Cluster0 NODE_ENV=production node ./dist/api.bundle.js",
+    "run:prod": "DB_CONNECTION_STR=mongodb+srv://admin:admin@cluster0.gaz0ywh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 NODE_ENV=production node ./dist/api.bundle.js",
     "webpack": "webpack",
     "start": "nodemon ./src/Server/app.ts",
+    "wrangler-dev": "LOG_LEVEL=trace  ./node_modules/.bin/wrangler dev src/index.ts",
+    "wrangler-deploy": "LOG_LEVEL=trace ./node_modules/.bin/wrangler deploy --minify src/index.ts",
     "format:check": "prettier --config ./.prettierrc  --check .",
     "format:write": "prettier --config ./.prettierrc --write .",
     "lint:check": "eslint .",
@@ -36,33 +38,42 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express-validator": "^7.0.1",
+    "fs-extra": "11.2.0",
     "google-auth-library": "^9.10.0",
+    "hono": "^4.4.6",
     "http": "0.0.0",
     "ioredis": "^5.3.2",
     "joi": "^17.12.2",
     "kerberos": "^2.1.0",
     "log4js": "^6.9.1",
+    "mongo-http": "^0.0.20",
     "mongodb-client-encryption": "^6.0.0",
     "mongoose": "^8.2.0",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "redis": "^4.6.13",
     "redis-clustr": "^1.4.3",
     "rxjs": "^7.8.1",
     "tsc-watch": "^6.0.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240529.0",
     "@eslint/js": "^9.5.0",
     "@types/async": "^3.2.24",
     "@types/chai": "^4.3.12",
+    "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10.0.6",
     "@types/mongoose-sequence": "^3.0.11",
     "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "chai": "^5.1.0",
-    "eslint": "^9.5.0",
+    "dotenv-webpack": "^8.1.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
@@ -82,6 +93,7 @@
     "typescript-eslint": "^7.13.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "wrangler": "^3.61.0"
   }
 }
