--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.launch
 .settings/
 *.sublime-workspace
+.wrangler
 
 # IDE - VSCode
 .vscode/*
@@ -38,4 +39,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-.angular/
+**/*js.map
