--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.596.0",
     "@aws-sdk/lib-storage": "^3.596.0",
+    "@aws-sdk/s3-request-presigner": "^3.600.0",
     "@mongodb-js/zstd": "^1.2.0",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
