--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20.11.20",
     "async": "^3.2.5",
     "aws4": "^1.12.0",
+    "axios": "^1.7.5",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -45,6 +46,7 @@
     "google-auth-library": "^9.10.0",
     "hono": "^4.4.6",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "ioredis": "^5.3.2",
     "joi": "^17.12.2",
     "kerberos": "^2.1.0",
