--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mongoose": "^8.2.0",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodejs-geolocation": "^2.3.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "redis": "^4.6.13",
